fix(background): scrolling on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,9 +39,15 @@ html {
 			background-blend-mode: hard-light;
 			background-position: center top;
 			background-repeat: no-repeat;
-			background-size: cover;
+			background-size: 100vw;
 			margin: 0;
 			transition: background-image 0.8s ease-in;
+
+			@media screen and (max-width: 640px) {
+				& {
+					background-size: auto 100vh;
+				}
+			}
 		}
 
 		div.container {
@@ -50,7 +56,7 @@ html {
 			z-index: 2;
 			top: 28px;
 
-			@media screen and (max-width: 600px) {
+			@media screen and (max-width: 640px) {
 				& {
 					flex-direction: row;
 				}
