--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -20,7 +20,7 @@ div.about__container {
 	}
 
 	> :last-child {
-		margin-top: 10px;
+		margin-top: 2vh;
 	}
 
 	.icons__wrapper {
